--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==3.0.2
 packaging==24.2
 pages==0.3
 piglet-templates==1.3.2
+pluggy==1.5.0
 pyee==12.1.1
 pyparsing==3.2.1
 pytest==8.3.5
